feat: added button classes

--- a/src/app/modules/components/wizard/wizard.component.html
+++ b/src/app/modules/components/wizard/wizard.component.html
@@ -23,10 +23,10 @@
         </div>
 
         <div class="wizard-footer">
-            <div class="pull-right" *ngIf="nextButtonVisible">
+            <div *ngIf="nextButtonVisible" [ngClass]="nextButtonClass">
                 <input #nextButton type='button' class='btn btn-next btn-fill btn-wd' [ngClass]="'btn-' + color" name='next' [value]='nextButtonText' (click)="nextTab()"/>
             </div>
-            <div class="pull-left" *ngIf="previousButtonVisible">
+            <div *ngIf="previousButtonVisible"  [ngClass]="prevButtonClass">
                 <input #previosButton type='button' class='btn btn-previous btn-fill btn-default btn-wd' name='previous' [value]='previousButtonText' (click)="previousTab()"/>
             </div>
             <div class="clearfix"></div>
