--- a/src/app/modules/components/wizard/wizard.component.html
+++ b/src/app/modules/components/wizard/wizard.component.html
@@ -20,7 +20,7 @@
         </ul>
     </div>
 
-    <div [attr.data-color]="color" id="wizardProfile">
+    <div id="wizardProfile">
         <ng-content select=".wizard-header"></ng-content>
 
         <div class="tab-content">
