--- a/src/app/modules/components/wizard/wizard.component.html
+++ b/src/app/modules/components/wizard/wizard.component.html
@@ -45,7 +45,7 @@
     <div *ngIf="nextButtonVisible">
         <input #nextButton type='button' [disabled]="activeTab.isNextButtonDisabled" [ngClass]="[activeTab.isNextButtonDisabled ? 'disabled' : '', nextButtonClass]"
                name='next' [value]='nextButtonText' (click)="nextTab()"/>
-        <i *ngIf="isNextIconNeeded" [ngClass]="[nextIconClass]">{{nextIconText}}</i>
+        <i *ngIf="nextIconText && nextIconClass" [ngClass]="[nextIconClass]">{{nextIconText}}</i>
     </div>
 </ng-template>
 
@@ -53,7 +53,7 @@
     <div *ngIf="previousButtonVisible">
         <input #previosButton type='button' [disabled]="activeTab.isPrevButtonDisabled" [ngClass]="[activeTab.isPrevButtonDisabled ? 'disabled' : '', prevButtonClass]"
                name='previous' [value]='previousButtonText' (click)="previousTab()"/>
-        <i *ngIf="isPrevIconNeeded" [ngClass]="[prevIconClass]">{{prevIconText}}</i>
+        <i *ngIf="prevIconText && prevIconClass" [ngClass]="[prevIconClass]">{{prevIconText}}</i>
     </div>
 </ng-template>
 
